# multi-paxos

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  client_input.txt
examples/: simulate.rs  start_acceptor.rs  start_client.rs  start_learner.rs  start_proposer.rs
src/: configurations.rs  lib.rs  message.rs  multi_paxos.rs  net_node.rs
tests/: README.md  loss_set.sh  test_1acceptor.sh  test_2acceptors.sh  test_basic.sh  test_catch_up.sh  test_loss.sh
tests/starters/: acceptor.sh  client.sh  learner.sh  proposer.sh
