[package]
name = "multi-paxos"
version = "0.1.0"
authors = ["Nelson Brochado"]
edition = "2018"

repository = "https://github.com/nbro/multi-paxos"
readme = "./README.md"
categories = ["networking"]
keywords = ["paxos", "multi-paxos", "atomic-broadcast"]

license = "MIT"
description = "An implementation of Atomic Broadcast using Multi-Paxos."

[dependencies]
net2 = "0.2"
bincode = "1.0"
serde_derive = "1.0"
serde = "1.0"
config = "0.9"
toml = "0.4"
rand = "0.6"
log = "0.4.0"
env_logger = "0.6.0"
text_io = "0.1.7"
uuid = { version = "0.7", features = ["v4", "serde"] }
